--- a/Primer-playbook.yml
+++ b/Primer-playbook.yml
@@ -6,3 +6,11 @@
   tasks:
     - name: Copias /etc/hosts
       copy: src=/etc/hosts dest=/home/aminaya
+      
+- name: Segundo playbook
+  hosts: webserver02
+  remote_user: aminaya
+  become: True
+  tasks:
+    - name: Copias /etc/hosts
+      copy: src=/etc/hosts dest=/home/aminaya
