--- a/web/instalar.yml
+++ b/web/instalar.yml
@@ -1,5 +1,5 @@
 - name: instalar y configurar apache 2
-  hosts: webserver01:webserver02
+  hosts: webserver01:webserver02:webserver03
   remote_user: aminaya
   become: true
   roles:
