--- a/web/roles/apache2/tasks/main.yml
+++ b/web/roles/apache2/tasks/main.yml
@@ -1,7 +1,20 @@
 - name: Instalar apache2
   apt: name=apache2 state=latest
+#utilizamos la variable del nombre del equipo para saber donde instalaremos
+  #when: ansible_nodename == "webserver01" or ansible_distribution == "ubuntu"
+  when: ansible_distribution == "ubuntu"
+- name: Instalar http2
+  yum: name=httpd state=latest
+  when: ansible_distribution =="CentOS"
+
 - name: Iniciar y habilitar el servicio
   service: name=apache2 state=started enabled=true
+  when: ansible_distribution == "ubuntu"
+
+- name: Iniciar y habilitar el servicio
+  service: name=httpd state=started enabled=true
+  when: ansible_distribution =="CentOS"
+
 - name: copiar fichero de configuracion
   # ansible reconoce de manera automatica el los archivos
   # de configuracion se encuentra en el directorio files
