--- a/web/instalar.yml
+++ b/web/instalar.yml
@@ -6,4 +6,5 @@
   # sustituimos el nombre del roll apache2
   # por una sobreescritura de la lista de usuarios
   #  - apache2
-    - { role: apache2, lista_usuarios: ["usuario1","root1"]}
+    - { role: apache2, lista_usuarios: ["usuario1","root1"], when: ansible_distribution == "ubuntu" }
+    - { role: httpd, lista_usuarios: ["usuario1","root1"], when: ansible_distribution == "CentOS" }
