--- a/web/roles/apache2/tasks/main.yml
+++ b/web/roles/apache2/tasks/main.yml
@@ -1,14 +1,14 @@
 - name: Instalar apache2
   include: instalar-apache2.yml
-#utilizamos la variable del nombre del equipo para saber donde instalaremos
-  #when: ansible_nodename == "webserver01" or ansible_distribution == "ubuntu"
-  #when: ansible_distribution == "ubuntu"
+# utilizamos la variable del nombre del equipo para saber donde instalaremos
+#  when: ansible_nodename == "webserver01" or ansible_distribution == "ubuntu"
+#  when: ansible_distribution == "ubuntu"
 
-#- name: Instalar http2
-  #include: instalar-httpd.yml
-  #when: ansible_distribution =="CentOS"
+# - name: Instalar http2
+#   include: instalar-httpd.yml
+#   when: ansible_distribution =="CentOS"
 
-  # en ves de utilizar copy utilizamos template para ir automaticamente
+# en ves de utilizar copy utilizamos template para ir automaticamente
 - name: copiar fichero index.html
   template: src=index.html.j2 dest=/var/www/html/index.html
 
@@ -20,7 +20,18 @@
 #     - phpmyadmin
 #     - php7
 
+# instalar multiples aplicativos en un bucle
 - name: Instalar paquetes3
   apt:
-    name: ['mysql-server', 'phpmyadmin', 'php7']
+    name: ['mysql-server', 'phpmyadmin', 'php7.4']
     state: latest
+
+# - name: creamos usuarios necesarios
+#   user:
+#     name: ['userone1','usertwo2']
+
+- name:
+  user: name={{ item.nombre }} groups={{ item.group }}
+  with_items:
+    - { nombre: usuariouno, group: www-data }
+    - { nombre: usuariodos, group: www-data }
