21-listdo de usuarios y paquetes v3

--- a/web/roles/apache2/tasks/main.yml
+++ b/web/roles/apache2/tasks/main.yml
@@ -24,7 +24,7 @@
 - name: Instalar paquetes3
   apt:
 #    name: ['mysql-server', 'phpmyadmin', 'php7.4']
-    name: {{ lista_paquetes }}
+    name: "{{ lista_paquetes }}"
     state: latest
 
 # - name: creamos usuarios necesarios
