--- a/web/instalar.yml
+++ b/web/instalar.yml
@@ -8,7 +8,7 @@
   # sustituimos el nombre del roll apache2
   # por una sobreescritura de la lista de usuarios
   #  - apache2
-    - { role: apache2 }
+    - { role: apache2, lista_paquetes: ["atop"], lista_usuarios: ["usuario1","root1"], when: ansible_distribution == "Ubuntu"}
     #- { role: httpd, lista_usuarios: ["usuario1","root1"], when: ansible_distribution == "CentOS" }
 
   # tasks:
