28-modulos ficheros openssl part2 v2

--- a/modulos/fichero2.yml
+++ b/modulos/fichero2.yml
@@ -9,3 +9,6 @@
     - name: validate if /etc/ is a directory
       debug: msg="es un directorio"
       when: output.stat.isdir
+
+    - name: Copiar configuracion de red
+      fetch: src=/etc/network/interfaces dest=/tmp/backup/interfaces flat=yes
