34-modulos de comandos utiles v3

--- a/modulos/wait_for.yml
+++ b/modulos/wait_for.yml
@@ -2,5 +2,7 @@
   hosts: webserver02
   become: true
   tasks:
-    - set_fact: nombre="{{ansible_hostname|upper}}"
-    - debug: var=nombre
+    - name: Esperamos hasta que el fichero exista
+      wait_for: path=/tmp/exista delay=2
+    - name: Esperamos hasta que el fichero no exista
+      wait_for: path=/tmp/exista state=absent
