36-modulos de base de datos- mongo

--- a/modulos/postgre_bbdd.yml
+++ b/modulos/postgre_bbdd.yml
@@ -3,7 +3,8 @@
   become: true
   tasks:
   #pre requisito-> sudo apt install python3-psycopg2
-     - postgresql_db: name=oforte state=present encoding=UTF-8
-       become_user: postgres
-     - postgresql_user: name=oforte state=present password=oforte1234
-       become_user: postgres
+     # - postgresql_db: name=oforte state=present encoding=UTF-8
+     #   become_user: postgres
+     # - postgresql_user: name=oforte state=present password=oforte1234 db=oforte priv=ALL
+     #   become_user: postgres
+     - mongodb_user: name=oforte password=oforte1234 database=admin
